refactor client api
